--- a/index.html
+++ b/index.html
@@ -289,11 +289,13 @@
         </div>
         <div class="elem2">
           <h1>Music - <span>Automotive</span> - Hotels -</h1>
-          <h1><span>Music</span> - Automotive - <span>Hotels</span></h1>
+          <h1>
+            <span id="music">Music</span> - Automotive - <span>Hotels</span>
+          </h1>
         </div>
       </div>
 
-      <div id="footer" data-scroll>
+      <div id="footer" data-scroll data-scroll-speed="-0.5">
         <div id="footer-text">
           <h1>Let's Create</h1>
           <h2>Let's Create</h2>
@@ -337,13 +339,6 @@
     <!-- Locomotive -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 
-    <!-- jQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
-
     <!-- GSAP -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
@@ -352,24 +347,31 @@
       referrerpolicy="no-referrer"
     ></script>
 
+     <!-- ScrollTrigger -->
+     <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+     integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
+
+    <!-- jQuery -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script> -->
+
     <!-- lettering js -->
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"
       integrity="sha512-VJ/iYbiu1eJ6yLimfTi65t2R9TFcG5D9X8ZCfbbEFhTfPnKJh8byoKXEawi5ScJZBYL1eiirL1+MczZDx0Tz9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
 
     <!-- textillate js -->
-    <script src="https://cdn.jsdelivr.net/npm/textillate@0.4.1/jquery.textillate.min.js"></script>
-
-    <!-- ScrollTrigger -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
-      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/textillate@0.4.1/jquery.textillate.min.js"></script> -->
 
     <!-- Three.js is needed for 3d Effects        ...image effect -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
